--- a/client/src/App.css
+++ b/client/src/App.css
@@ -97,6 +97,7 @@ label {
 
 input[type="text"],
 input[type="password"],
+textarea,
 .role_select {
 	display: block;
 	color: var(--black);
@@ -107,6 +108,14 @@ input[type="password"],
 	font-size: 1.1rem;
 	box-sizing: border-box;
 	padding-left: 5px;
+}
+
+textarea {
+	resize: vertical;
+	min-height: 2rem;
+	overflow-y: auto;
+	padding: 5px;
+	height: auto;
 }
 
 .form-control {
@@ -149,6 +158,7 @@ input[type="password"],
 	margin: 5px 0 0 0;
 	padding: 0;
 	background-color: var(--black);
+	max-width: 100px;
 }
 
 .canvas {
@@ -159,6 +169,7 @@ input[type="password"],
 	justify-content: center;
 	padding: 10px;
 	border: 1px solid black;
+	top: 20vh;
 	left: calc(50% - calc(var(--canvas_width) / 2));
 	z-index: 1;
 	background-color: var(--light_gray);
