--- a/client/src/App.css
+++ b/client/src/App.css
@@ -182,3 +182,72 @@ textarea {
 	width: 100%;
 	height: 300px;
 }
+
+.home_container {
+	max-height: 100vh;
+	overflow: hidden;
+}
+
+.home_image {
+	width: 100%;
+	z-index: -1;
+	mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgb(0 0 0 / 39%));
+}
+
+.first_row {
+	position: absolute;
+	left: min(143px, 5%);
+	top: 150px;
+	font-family: Inknut Antiqua;
+	font-size: 3rem;
+}
+
+.sec_row {
+	position: absolute;
+	max-width: min(50%, 500px);
+	left: min(143px, 5%);
+	top: 270px;
+	font-size: 1.5rem;
+}
+
+.cleaning_card_container {
+	display: grid;
+	grid-template-columns: auto auto auto auto;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.category_card {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin-top: 20px;
+	margin-bottom: 30px;
+}
+
+.sub_category_input {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.sub_category_input_field {
+	display: grid;
+	grid-template-columns: 1fr 9fr 3fr 2fr 3fr 4fr;
+	grid-column-gap: 10px;
+	align-items: center;
+	margin-bottom: 5px;
+	padding-left: 10px;
+	width: 100%;
+}
+
+.sub_category_input_field > label {
+	font-size: 0.8rem;
+	font-weight: normal;
+}
+
+.sub_category_input_field > input[type="text"] {
+	width: 100%;
+	font-size: 0.8rem;
+	font-weight: normal;
+}
