--- a/client/src/App.css
+++ b/client/src/App.css
@@ -110,6 +110,16 @@ textarea,
 	padding-left: 5px;
 }
 
+input[type="number"] {
+	display: block;
+	color: var(--black);
+	width: 40px;
+	padding-left: 5px;
+	border: none;
+	border-radius: 5px;
+	font-size: 1.1rem;
+}
+
 textarea {
 	resize: vertical;
 	min-height: 2rem;
@@ -250,4 +260,71 @@ textarea {
 	width: 100%;
 	font-size: 0.8rem;
 	font-weight: normal;
+}
+
+.view_item_container {
+	display: flex;
+	flex-direction: row;
+	min-height: 80vh;
+	background-color: var(--main_theme);
+}
+
+.view_item_container > .left_container {
+	width: 40%;
+	padding: 20px 0 0 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.view_item_container > .right_container {
+	width: 60%;
+	padding: 20px 0 0 0;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.view_item_container > .left_container > .show_rating {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+}
+
+.feedback_form {
+	width: 90%;
+	background-color: var(--white);
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
+	border-radius: 10px;
+}
+
+.feedback_form_stars {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin-top: 10px;
+}
+
+.feedback_form_stars > div > input[type="radio"] {
+	display: none;
+}
+
+.feedback_form_description {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 100%;
+}
+
+.feedback_form_description > textarea {
+	width: 100%;
+}
+
+.rating_box {
+	width: 90%;
+	background-color: floralwhite;
+	border-radius: 5px;
 }
