--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,6 +48,10 @@
 	background-color: var(--violet);
 }
 
+.icon {
+	color: var(--white);
+}
+
 .tiny-font-size {
 	font-size: 0.5rem;
 }
@@ -121,6 +125,10 @@ select {
 
 .width100 {
 	width: 100%;
+}
+
+.hover-pointer:hover {
+	cursor: pointer;
 }
 
 .mt-10 {
