--- a/client/src/App.css
+++ b/client/src/App.css
@@ -380,3 +380,13 @@ textarea {
 .white-bg-input > input[type="text"] {
 	background-color: var(--white);
 }
+
+.admin-btn {
+	color: var(--black);
+	background-color: var(--white);
+	padding: 5px 10px;
+	margin: 10px 10px;
+	border-radius: 5px;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.09) 0px 2px 1px,
+		rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px;
+}
