--- a/client/src/App.css
+++ b/client/src/App.css
@@ -233,8 +233,6 @@ textarea {
 .cleaning_card_container {
 	display: grid;
 	grid-template-columns: auto auto auto auto;
-	justify-content: space-around;
-	align-items: center;
 }
 
 .category_card {
@@ -242,8 +240,8 @@ textarea {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-top: 10px;
-	margin-bottom: 20px;
+	margin: 10px;
+	margin-bottom: auto;
 }
 
 .sub_category_input {
